renamed sample files

--- a/sample-project/html/sample-system-helper.html
+++ b/sample-project/html/sample-system-helper.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="parent">
-<img src="../images/asdex-processing.jpg" class="media" title="ASDE-X Processing" alt="ASDE-X Processing" width="800" onclick="checkCursor()" />
+<img src="../images/sample-image.jpg" class="media" title="ASDE-X Processing" alt="ASDE-X Processing" width="800" onclick="checkCursor()" />
 
 
 <div class="mytestdiv tooltip" id="stars"></div>
