--- a/sample-project/html/sample-system.html
+++ b/sample-project/html/sample-system.html
@@ -5,12 +5,12 @@
 
 <style type="text/css">
 @import url("../css/master.css");
-@import url("../css/asdex-processing.css");
+@import url("../css/sample.css");
 </style>
 <body>
 
 <div class="parent">
-    <img src="../images/asdex-processing.jpg" class="media" title="ASDE-X Processing" alt="ASDE-X Processing" width="800"  onmouseover="setupMaps()" />
+    <img src="../images/sample-image.jpg" class="media" title="An example complex system" alt="An example complex system" width="800"  onmouseover="setupMaps()" />
 
 
     <div class="mytestdiv tooltip" id="prm-a" onclick="window.open('details/prm-a.html', '_self')">
